[package]
name = "ferros_firewall_ebpf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", tag = "v0.12.0" }
aya-log = { git = "https://github.com/aya-rs/aya", tag = "v0.12.0", optional = true }

[build-dependencies]
aya-tool = "0.1"

[features]
default = []
