[package]
name = "ferros_firewall_ebpf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", rev = "f2f3482474d22dfa7023e1e2e4f57a5f4a867c3e" }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "f2f3482474d22dfa7023e1e2e4f57a5f4a867c3e", optional = true }

[build-dependencies]
aya-tool = "0.1"

[features]
default = []
